--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multiparty": "^4.2.3",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "next-videos": "^1.4.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
