--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.0",
+    "@supabase/supabase-js": "^2.56.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.2",
+    "markdown-it": "^14.1.0",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.1",
     "multiparty": "^4.2.3",
@@ -24,6 +26,11 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "19.1.12",
+    "typescript": "5.9.2"
   }
 }
